Changes to template

--- a/src/index.html
+++ b/src/index.html
@@ -73,38 +73,53 @@
       <div class="parallax-bg-wrapper">
         <span
           class="parallax-bg parallax-bg-1"
-          data-rellax-speed="2"
+          data-rellax-mobile-speed="-6"
+          data-rellax-tablet-speed="-10"
+          data-rellax-desktop-speed="-14"
         ></span>
         <span
           class="parallax-bg parallax-bg-2"
-          data-rellax-speed="5"
+          data-rellax-speed="10"
+          data-rellax-mobile-speed="-4"
+          data-rellax-tablet-speed="-8"
+          data-rellax-desktop-speed="-11"
         ></span>
         <span
           class="parallax-bg parallax-bg-3"
-          data-rellax-speed="10"
+          data-rellax-speed="26"
+          data-rellax-mobile-speed="1"
+          data-rellax-tablet-speed="3"
+          data-rellax-desktop-speed="6"
         ></span>
         <span
           class="parallax-bg parallax-bg-4"
-          data-rellax-speed="10"
+          data-rellax-speed="26"
+          data-rellax-mobile-speed="1"
+          data-rellax-tablet-speed="3"
+          data-rellax-desktop-speed="6"
         ></span>
       </div>
     </div>
-    <div class="section section-intro">
-      <div class="wrapper">
-        <h2 class="section-title section-title-1">The Last Mile Blog</h2>
-        <div class="section-content">
-          <span class="section-content-desc">On digital inclusion, environmental sustainability, economic freedom, and self-data governance.</span>
-          <div class="section-content-scroll">
-            <ion-icon name="chevron-down-sharp" class="section-content-scroll-icon"></ion-icon>
+    <section class="section section-intro section-active">
+      <div class="section-viewer">
+        <div class="wrapper">
+          <h2 class="section-title">The Last Mile Blog</h2>
+          <div class="section-content">
+            <span class="section-content-desc">On digital inclusion, environmental sustainability, economic freedom, and self-data governance.</span>
+            <div class="section-content-scroll">
+              <ion-icon name="chevron-down-sharp" class="section-content-scroll-icon"></ion-icon>
+            </div>
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <section class="section">
-      <div class="wrapper">
-        <h2 class="section-title">Placeholder Copy goes here!</h2>
-        <div class="section-content">
-          <span class="section-content-desc">Parallax all the things!</span>
+      <div class="section-viewer">
+        <div class="wrapper">
+          <h2 class="section-title">Placeholder Copy goes here!</h2>
+          <div class="section-content">
+            <span class="section-content-desc">Parallax all the things!</span>
+          </div>
         </div>
       </div>
     </section>
