fix bg gradient and button size

--- a/src/index.html
+++ b/src/index.html
@@ -72,6 +72,9 @@
     <div class="parallax-section">
       <div class="parallax-bg-wrapper">
         <span
+          class="parallax-bg parallax-bg-0"
+        ></span>
+        <span
           class="parallax-bg parallax-bg-1"
           data-rellax-mobile-speed="-6"
           data-rellax-tablet-speed="-10"
